Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__CriticalitySystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CriticalitySystem__c</fullName>
    <description>Identity of the terminology system</description>
    <label>Criticality System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>