Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__IsVisibleOnPatientCard__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
    <description>Returns true if value of Status Code field is NOT equal to ' Resolved ', else returns false.</description>
    <formula>IF(  UPPER(HealthCloudGA__StatusLabel__c)   &lt;&gt; 'RESOLVED' , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns true if value of Status Label field is NOT equal to ' Resolved ', else returns false.</inlineHelpText>
    <label>IsVisibleOnPatientCard</label>
    <type>Checkbox</type>
</CustomField>