Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__Patient__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who the sensitivity is for</description>
    <label>Patient</label>
    <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
    <relationshipLabel>EHR Allergy Intolerances</relationshipLabel>
    <relationshipName>AllergyIntolerances</relationshipName>
    <type>Lookup</type>
</CustomField>