Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__RecordedDate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RecordedDate__c</fullName>
    <label>Recorded Date</label>
    <type>DateTime</type>
</CustomField>