Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__Recorder__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Recorder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who recorded the sensitivity</description>
    <label>Recorder</label>
    <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
    <relationshipLabel>Allergy Intolerances</relationshipLabel>
    <relationshipName>AllergyIntolerances</relationshipName>
    <type>Lookup</type>
</CustomField>