Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__RecorderName255__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RecorderName255__c</fullName>
    <label>Recorder Name 255</label>
    <length>255</length>
    <type>Text</type>
</CustomField>