Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__SensitivityTest1__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SensitivityTest1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Observation that confirm or refute</description>
    <label>Sensitivity Test1</label>
    <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
    <relationshipLabel>EHR Allergy Intolerances</relationshipLabel>
    <relationshipName>AllergyIntolerances</relationshipName>
    <type>Lookup</type>
</CustomField>