Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__SensitivityTest2__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SensitivityTest2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Observation that confirm or refute</description>
    <label>Sensitivity Test2</label>
    <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
    <relationshipLabel>EHR Allergy Intolerances (Sensitivity Test2)</relationshipLabel>
    <relationshipName>AllergyIntolerances2</relationshipName>
    <type>Lookup</type>
</CustomField>