Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__SensitivityTest3__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SensitivityTest3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Observation that confirm or refute</description>
    <label>Sensitivity Test3</label>
    <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
    <relationshipLabel>EHR Allergy Intolerances (Sensitivity Test3)</relationshipLabel>
    <relationshipName>AllergyIntolerances3</relationshipName>
    <type>Lookup</type>
</CustomField>