Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__SensitivityTypeCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SensitivityTypeCode__c</fullName>
    <description>Sensitivity Type Symbol in syntax defined by the system</description>
    <label>Sensitivity Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>