Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__SensitivityTypeLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SensitivityTypeLabel__c</fullName>
    <label>Sensitivity Type Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>