Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__Substance255__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Substance255__c</fullName>
    <description>The substance that causes the sensitivity</description>
    <label>Substance 255</label>
    <length>255</length>
    <type>Text</type>
</CustomField>