Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__SubstanceCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SubstanceCode__c</fullName>
    <description>Code that identifies this allergy</description>
    <label>Substance Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>