Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__SubstanceCodeSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SubstanceCodeSystem__c</fullName>
    <description>System for the code that identifies this allergy</description>
    <label>Substance Code System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>